--- a/ios-developer.html
+++ b/ios-developer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/NFolksLtd/743999698299381-ios-developer-grand-rapids-mi-49544'>nFolks Ltd iOS Developer - Grand Rapids, MI 49544 | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/5kq8g19qwg39kpshpj3zadheuc'>Lead iOS Developer up to $200,000 + Remote | CardinalHire</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
@@ -92,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=s1Nspgwq&__jvsc=Twitter&bid=nrMqgMwa'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=s1Nspgwq&__jvsc=Twitter&bid=nrMqgMwa'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -159,7 +163,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Backend Application Developer (Node.js) at Semios.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -203,7 +207,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vienna</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">San Bruno, California</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -241,7 +245,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -317,7 +321,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Costa Mesa, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/j/9C4D9C3517'>Karmarama - Jobs: Senior iOS Developer - Apply online</a></h5> 
+<h5><a href='https://karmarama.workable.com/j/9C4D9C3517'>Karmarama - Jobs: Senior iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -397,7 +401,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tbxnet.applytojob.com/apply/beytnCYVZZ/REMOTE-IOS-DEVELOPER'>REMOTE iOS DEVELOPER - Toolbox TVE - Career Page</a></h5> 
+<h5><a href='http://tbxnet.applytojob.com/apply/beytnCYVZZ/REMOTE-IOS-DEVELOPER'>REMOTE iOS DEVELOPER - Toolbox TVE - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -421,7 +425,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://getchip.recruitee.com/o/ios-developer-london'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getchip.recruitee.com/o/ios-developer-london'>
       iOS Developer - Chip
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
@@ -458,10 +462,6 @@ automotive?...</p>
 <h5><a href='https://qivos.workable.com/jobs/1133451'>iOS Developer - Apply online - QIVOS - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 22, 2019 ... Apply online for the job of iOS Developer at QIVOS.</p>
-<hr/>
-<h5><a href='https://zipdev.workable.com/j/AF857034D1'>Zipdev - Jobs: iOS Developer - Apply online</a></h5> 
-<p><span class="badge badge-light">Mexico City, Mexico</span></p>
-<p>Posted on: 2019-10-03</p>
 <hr/>
 
 
