--- a/software.html
+++ b/software.html
@@ -39,8 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oPN89fwD&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYiXmMwQ'>Palo Alto Networks Careers - Senior Cloud Software Engineer (Cloud Security Infrastructure)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mintel/jobs/1928318'>Job Application for Senior Software Engineer - Big Data Platform at Mintel</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268692-senior-net-software-developer'>KSM Consulting Senior .NET Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Indianapolis, IN</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268919-data-analytics-software-engineer'>KSM Consulting Data Analytics Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Indianapolis, IN</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oPN89fwD&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYiXmMwQ'>Palo Alto Networks Careers - Senior Cloud Software Engineer (Cloud Security Infrastructure)</a></h5> 
+<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwkaVfwF&k=Job&j=oqHQafwR&__jvst=Employee&__jvsd=syGWShwO&__jvsc=Twitter&bid=nzaXmMwj&jvi=oqHQafwR,Job&jvk=Job'>Schneider Electric - UK Careers - Software Engineer - C.C++.C# Developer</a></h5> 
@@ -95,7 +107,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tealium/75baeb2b-94a5-4d89-b746-9afa7227c02f'>Tealium - Software Engineer - Data Platform - Java</a></h5> 
+<h5><a href='https://jobs.lever.co/tealium/75baeb2b-94a5-4d89-b746-9afa7227c02f'>Tealium - Software Engineer - Data Platform - Java</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -147,11 +159,11 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999696837652-senior-software-engineer-media-broadcasting-london'>Fulton Garrick Ltd Senior Software Engineer - Media & Broadcasting - London | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999696837652-senior-software-engineer-media-broadcasting-london'>Fulton Garrick Ltd Senior Software Engineer - Media & Broadcasting - London | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London  London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
+<h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -247,11 +259,11 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698263336-software-engineer-new-graduates-last-year-students-'>RAKUNA Software Engineer (New Graduates, Last Year Students) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698263336-software-engineer-new-graduates-last-year-students-'>RAKUNA Software Engineer (New Graduates, Last Year Students) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://pulsesecure.applytojob.com/apply/090w7A5kdo/Sr-Manager-Software-Engineering'>Sr. Manager Software Engineering - Pulse Secure - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pulsesecure.applytojob.com/apply/090w7A5kdo/Sr-Manager-Software-Engineering'>Sr. Manager Software Engineering - Pulse Secure - Career Page</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -267,7 +279,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/edkiY2Wb8f/Senior-Software-Engineer-Python-Engineer'>Senior Software Engineer - Python Engineer - ZigZag Careers - Career Page</a></h5> 
+<h5><a href='http://zigzag.applytojob.com/apply/edkiY2Wb8f/Senior-Software-Engineer-Python-Engineer'>Senior Software Engineer - Python Engineer - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -355,7 +367,7 @@
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oeRDafwC&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nnNpmMwc'>ServiceNow Careers - Staff/Senior Staff Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oeRDafwC&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nnNpmMwc'>ServiceNow Careers - Staff/Senior Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -369,7 +381,7 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -397,7 +409,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oTPfbfwS&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nhghmMwr'>Egnyte Careers - Senior Software Engineer - Cloud</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oTPfbfwS&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nhghmMwr'>Egnyte Careers - Senior Software Engineer - Cloud</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -413,7 +425,7 @@
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ov2rbfwT&__jvst=Tenable+Employee&__jvsd=syUaHfw3&__jvsc=Twitter&bid=nCIbmMw8'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ov2rbfwT&__jvst=Tenable+Employee&__jvsd=syUaHfw3&__jvsc=Twitter&bid=nCIbmMw8'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -435,19 +447,7 @@ looking?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584713'>Stellenangebot: Software Developer Backend (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27372'>Software Engineer III - RELX Careers</a></h5> 
-<p><span class="badge badge-light">Raleigh, North Carolina United States</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27492'>Software Engineer III - RELX Careers</a></h5> 
-<p><span class="badge badge-light">Raleigh, North Carolina United States</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
